[package]
name = "shylock"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "shylock-data",
    "shylock-parser",
    "shylock-dominator",
]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
opt-level = "z"  # 3 => fast, s/z => small

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]  # O4 => fast, Oz/Os => small
