[package]
name = "shylock-data"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
geo-types = { version = "0.6",  features = ["serde"] }
log = "0.4.0"
radix_trie = "0.1.6"
rust_decimal = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
