[package]
name = "shylock-parser"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0"
env_logger = "0.7"
geo-types = { version = "0.6",  features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.0"
radix_trie = "0.1.6"
regex = "1.4"
reqwest = { version = "0.11", features = ["blocking", "cookies", "gzip", "json"] }
rust_decimal = "1.7.0"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shylock-data = { path = "../shylock-data" }
zip = "0.5"
