[package]
name = "shylock-parser"
version = "0.2.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.1"
env_logger = "0.7"
futures = "0.3"
geo-types = { version = "0.6",  features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.0"
radix_trie = "0.1.6"
regex = "1.4"
reqwest = { version = "0.11", features = ["blocking", "cookies", "gzip", "json"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
reqwest-tracing = "0.2"
rust_decimal = "1.26"
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "chrono", "migrate", "sqlite" ] }
shylock-data = { path = "../shylock-data" }
tokio = { version = "1", features = ["full"] }
zip = "0.5"
