[package]
name = "shylock-ui"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
geo-types = { version = "0.6",  features = ["serde"] }
log = "0.4.0"
once_cell = "1.5"
reqwasm = "0.1.0"
rust_decimal = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
shylock-data = { path = "../shylock-data" }
yew = "0.17"
yew-router = "0.14.0"
yew_styles = { version="0.9", features=["spinner", "layouts", "forms", "text"] }
yewtil = "0.3.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
