[package]
name = "shylock-ui"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
geo-types = { version = "0.6",  features = ["serde"] }
load-dotenv = "0.1"
log = "0.4"
num-format = "0.4"
once_cell = "1.5"
reqwasm = "0.1"
rust_decimal = "1.7"
serde = { version = "1.0", features = ["derive"] }
shylock-data = { path = "../shylock-data" }
substring = "1.4"
yew = "0.17"
yew_assets= {version = "0.1", features = ["full"]}
yew-router = "0.14"
yew_styles = { version="0.9", features=["full"] }
yewtil = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
